<resources>
    <string name="app_name">NotesForHW</string>
    <string name="note_title">Note Title</string>
    <string name="title_hint">Название заметки</string>
    <string name="date_hint">Выберите дату</string>
    <string name="text_hint">Введите текст заметки</string>
    <string name="add_note">Add note</string>
    <string name="empty_not_saved">Заметка пустая и поэтому не была сохранена</string>
    <string name="button_back">Назад</string>
    <string name="settings">settings</string>
    <string name="about">about</string>
    <string name="add">Add</string>
    <string name="context_edit">Редактировать</string>
    <string name="context_delete">Удалить</string>
    <string name="note_button_save">Сохранить</string>
    <string name="notes_list_clear">Очистить список заметок</string>
    <string name="textViewClear">Очистить список заметок?</string>
    <string name="Yes">Да</string>
    <string name="No">Нет</string>

    <string-array name="titlesForNotes">
        <item>Список покупок</item>
        <item>ДР Ивана</item>
        <item>Позвонить в банк</item>
        <item>Цели</item>
        <item>Список книг</item>
        <item>Любя, съешь щипцы, — вздохнёт мэр, — кайф жгуч</item>
        <item>Шеф взъярён тчк щипцы с эхом гудбай Жюль.</item>
        <item>Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф.</item>
        <item>Экс-граф? Плюш изъят. Бьём чуждый цен хвощ!</item>
        <item>Эх, чужак! Общий съём цен шляп (юфть) — вдрызг!</item>
    </string-array>

    <string-array name="datesForNotes">
        <item>01.08.2021</item>
        <item>13.09.2021</item>
        <item>02.08.2021</item>
        <item>До 01.01.2022</item>
        <item>01.01.2021</item>
        <item>01.01.2021</item>
        <item>01.01.2021</item>
        <item>01.01.2021</item>
        <item>01.01.2021</item>
        <item>01.01.2021</item>
    </string-array>

    <string-array name="textForNotes">
        <item>Колбаса, сыр, хлеб, мыло</item>
        <item>Поздравить Ивана</item>
        <item>Че там с деньгами?</item>
        <item>Выучить Андроид разработку, Зарабатывать 300к\/нс</item>
        <item>Колобок, Незнайка на Луне, Искусство войны</item>
        <item>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Вдали от всех живут они в буквенных домах на берегу Семантика большого языкового океана. Маленький ручеек Даль журчит по всей стране и обеспечивает ее всеми необходимыми правилами.</item>
        <item>Эта парадигматическая страна, в которой жаренные члены предложения залетают прямо в рот. Даже всемогущая пунктуация не имеет власти над рыбными текстами, ведущими безорфографичный образ жизни.</item>
        <item>Однажды одна маленькая строчка рыбного текста по имени Lorem ipsum решила выйти в большой мир грамматики. Великий Оксмокс предупреждал ее о злых запятых, диких знаках вопроса и коварных точках с запятой, но текст не дал сбить себя с толку.</item>
        <item>Он собрал семь своих заглавных букв, подпоясал инициал за пояс и пустился в дорогу. Взобравшись на первую вершину курсивных гор, бросил он последний взгляд назад, на силуэт своего родного города Буквоград, на заголовок деревни Алфавит и на подзаголовок своего переулка Строчка.</item>
        <item>Грустный риторический вопрос скатился по его щеке и он продолжил свой путь. По дороге встретил текст рукопись. Она предупредила его: «В моей стране все переписывается по несколько раз. Единственное, что от меня осталось, это приставка «и».</item>
    </string-array>
</resources>